<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.co.oliwali</groupId>
  <artifactId>HawkEye</artifactId>
  <version>1.0.7c</version>
  <name>HawkEye</name>
  <description>Bukkit data logging plugin with web-based data browser</description>
  
  <repositories>
    <!-- Bukkit -->
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    
    <!-- WorldEdit -->
    <repository>
      <id>enginehub-repo</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
  </repositories>
  
  <dependencies>
    <dependency>
      <groupId>org.bukkit</groupId>
      <artifactId>bukkit</artifactId>
      <version>1.15.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-core</artifactId>
      <version>7.2.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.sk89q.worldedit</groupId>
      <artifactId>worldedit-bukkit</artifactId>
      <version>7.2.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  
  <build>
    <finalName>${project.name}</finalName>
    <sourceDirectory>${basedir}/src/main/java/</sourceDirectory>
    
    <resources>
      <resource>
        <targetPath>.</targetPath>
        <filtering>true</filtering>
        <directory>${basedir}/src/main/resources/</directory>
        <includes>
          <include>plugin.yml</include>
          <include>config.yml</include>
        </includes>
      </resource>
    </resources>
    
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      
    </plugins>
  </build>
</project>
